tests/compile-fail/provenance/strict-provenance-offset.stderr
error: Undefined Behavior: pointer arithmetic failed: $HEX is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
           
   = note: inside `std::ptr::const_ptr::<impl *const u8>::offset` at rustc_src/src/ptr/const_ptr.rs:LL:CC
note: inside `main` at $DIR/strict-provenance-offset.rs:LL:CC
  --> $DIR/strict-provenance-offset.rs:LL:CC
   |
LL |     let _ = unsafe { roundtrip.offset(1) };
   |                      ^^^^^^^^^^^^^^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

